--- a/1.html
+++ b/1.html
@@ -79,14 +79,14 @@
 						<div class="pagination">
 							<!--<a href="#" class="button previous">Previous Page</a>-->
 							<div class="pages">
-								<a href="#" class="active">1</a>
+								<a href="1.html#"class="active">1</a>
 								<a href="2.html#">2</a>
-								<a href="#">3</a>
-								<a href="#">4</a>
+								<a href="3.html#">3</a>
+								<a href="4.html#">4</a>
 								<span>&hellip;</span>
 								<a href="#">20</a>
 							</div>
-							<a href="#" class="button next">Next Page</a>
+							<a href="2.html#" class="button next">Next Page</a>
 						</div>
 
 				</div>
@@ -131,8 +131,8 @@
 							<h2>Recent Posts</h2>
 						</header>
 						<ul>
-							<li><a href="#">Agricultura sintropica</a></li>
-							<li><a href="#">Pesquisa científica</a></li>
+							<li><a href="1.html#">Agricultura sintropica</a></li>
+							<li><a href="2.html#">Pesquisa científica</a></li>
 							<li><a href="#">Sed dolore magna</a></li>
 							<li><a href="#">Malesuada commodo</a></li>
 							<li><a href="#">Ipsum metus nullam</a></li>
