--- a/3.html
+++ b/3.html
@@ -20,7 +20,7 @@
 					<!-- Post -->
 						<article class="box post post-excerpt">
 							<header>
-								<h2><a href="#">Pesquisa científica</a></h2>
+								<h2><a href="#">Agricultura de Precisão: Soluções Tecnológicas para Desafios Climáticos</a></h2>
 								<p>Pesquisa científicaPesquisa científicaPesquisa científica</p>
 							</header>
 							<div class="info">
@@ -32,22 +32,22 @@
 									<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
 								</ul>
 							</div>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<p> <a href="#python">A Pesquisa: </a></p>
 								<p>
-								A pesquisa ambiental é um campo em constante evolução, e uma das abordagens mais inovadoras que estamos explorando envolve a elaboração de GIFs que representam séries temporais do Índice de Vegetação por Diferença Normalizada (NDVI) ao longo do ano. Essa técnica é especialmente útil para análises que envolvem mudanças na cobertura do solo e a saúde da vegetação em regiões específicas, como o deserto de Gobi, na China. </p>
-								<p> <a href="#python">O Que é NDVI? </a></p>
-								<p>O NDVI é uma medida amplamente utilizada para avaliar a vegetação a partir de dados de satélites. Ele varia de -1 a +1, onde valores próximos a +1 indicam vegetação saudável e densa, enquanto valores negativos geralmente correspondem a áreas sem vegetação, como corpos d'água ou solo exposto. Compreender o NDVI ao longo das estações é crucial para monitorar a saúde do ecossistema e as dinâmicas de expansão ou contração de áreas desertificadas.</p>
-								<p> <a href="#python">Visualizando Mudanças com GIFs </a></p> 
-								<p>A criação de GIFs a partir de dados NDVI nos permite visualizar as mudanças ao longo do tempo de forma dinâmica e impactante. No caso do deserto de Gobi, por exemplo, podemos observar como essa região avança e recua ao longo do ano. Essas animações capturam a essência das mudanças sazonais e nos ajudam a entender melhor os processos ecológicos que afetam o local. Com esses GIFs, conseguimos transmitir informações complexas de maneira mais intuitiva, facilitando a interpretação tanto para cientistas quanto para o público em </p
-								>
-								<p> <a href="#python">A Relevância da Análise Temporal  </a></p> 
-								<p> Análises temporais são essenciais para compreender como os ecossistemas reagem a variáveis climáticas e antropogênicas. O deserto de Gobi, uma das maiores regiões desérticas do mundo, é um exemplo perfeito para estudar essas dinâmicas. Durante períodos de maior precipitação, áreas que tradicionalmente eram áridas podem apresentar um aumento significativo na vegetação, refletido em valores mais altos de NDVI. Por outro lado, em épocas de seca, podemos observar uma retração da vegetação, evidenciando os desafios enfrentados por esses ecossistemas. </p>
-								<p> <a href="#python">Interdisciplinaridade e Colaboração </a></p> 
-								<p> Uma das grandes vantagens de usar ferramentas como GIFs e gráficos é a possibilidade de colaboração interdisciplinar. Os projetos podem envolver não apenas biólogos e ecologistas, mas também especialistas em ciência da computação e design gráfico. Essa interação rica entre diferentes áreas do conhecimento enriquece nossas análises e nos permite apresentar resultados de maneira mais eficaz. </p> 
-								<p> <a href="#python">Conclusão: Um Caminho para a Sustentabilidade </a></p> 
-								<p> A combinação de GIFs de séries temporais em NDVI e a visualização de dados em Python representa um avanço significativo nas metodologias de pesquisa ambiental. Essas abordagens não apenas ampliam nosso entendimento sobre as dinâmicas dos ecossistemas, mas também potencializam a comunicação científica, tornando as informações mais acessíveis e atraentes. À medida que continuamos a explorar essas técnicas, acreditamos que poderemos contribuir ainda mais para a preservação e compreensão do nosso meio ambiente, ajudando a construir um futuro mais sustentável para as próximas gerações.</p> 
-								<p> Investir em tecnologia e metodologias inovadoras é essencial para enfrentar os desafios ambientais do século XXI, e estamos comprometidos em utilizar essas ferramentas para promover a conscientização e a ação em relação às questões ecológicas que impactam nosso planeta.</p> 
+								Em um mundo onde as mudanças climáticas e os eventos extremos se tornam cada vez mais frequentes, a agricultura enfrenta desafios sem precedentes. Diante dessa realidade, um dos eixos principais da nossa equipe é a agricultura de precisão, uma abordagem inovadora que busca soluções para lidar com essas anomalias climáticas por meio do uso de novas tecnologias e práticas de cultivo mais sustentáveis.</p>
+								<p> <a href="#python">O Que é Agricultura de Precisão?</a></p>
+								<p>A agricultura de precisão é uma metodologia que utiliza tecnologias avançadas para monitorar e gerenciar de forma eficiente as variáveis agrícolas. Essa abordagem permite que os produtores tomem decisões baseadas em dados específicos, o que resulta em uma melhor utilização dos recursos, aumento da produtividade e redução dos impactos ambientais. Ao integrar tecnologias como sensores, imagens de satélite e drones, conseguimos obter informações detalhadas sobre o estado das culturas e as condições do solo.</p>
+								<p> <a href="#python">A Importância do Monitoramento com Drones</a></p> 
+								<p>Um dos grandes avanços na agricultura de precisão é o uso de drones. Esses dispositivos oferecem uma maneira eficiente de monitorar vastas áreas de cultivo, coletando dados em tempo real sobre o solo e as plantas. Com imagens aéreas de alta resolução, é possível identificar anomalias nas culturas, como áreas com deficiência hídrica ou carências nutricionais, que poderiam passar despercebidas com métodos tradicionais. </p>
+								<p>Além disso, os drones permitem a aplicação localizada de insumos, como fertilizantes e defensivos agrícolas. Em vez de tratar toda a área de cultivo de forma uniforme, os dados obtidos pelo monitoramento aéreo permitem que as correções sejam feitas de maneira mais direcionada. Isso não apenas economiza recursos, mas também minimiza o impacto ambiental, reduzindo a quantidade de produtos químicos utilizados. </p>
+								<p> <a href="#python">Práticas Sustentáveis no Uso da Água</a></p> 
+								<p> Outro aspecto crucial da agricultura de precisão é a irrigação eficiente. Com a ajuda de tecnologias de monitoramento, como sensores de umidade do solo e sistemas de irrigação inteligentes, os agricultores podem otimizar o uso da água. Isso é especialmente importante em regiões onde a escassez hídrica é um desafio crescente. Ao irrigar apenas quando necessário e na quantidade certa, conseguimos aumentar a eficiência hídrica e garantir que as plantas recebam o que precisam sem desperdícios. </p>
+								<p> <a href="#python">Enfrentando Eventos Climáticos Extremos </a></p> 
+								<p> Os eventos climáticos extremos, como secas severas ou inundações, podem devastar colheitas e prejudicar a segurança alimentar. A agricultura de precisão se apresenta como uma solução viável para mitigar esses riscos. Através de análises preditivas e dados históricos, os agricultores podem se preparar melhor para esses eventos, ajustando suas práticas de cultivo e selecionando culturas mais resistentes. </p> 
+								<p> <a href="#python">Conclusão: Rumo a um Futuro Sustentável </a></p> 
+								<p> A agricultura de precisão não é apenas uma tendência, mas uma necessidade diante dos desafios que a agricultura enfrenta atualmente. Através do uso de tecnologias inovadoras, como drones, e práticas de cultivo sustentáveis, conseguimos enfrentar as anomalias climáticas e garantir uma produção agrícola mais resiliente e responsável. </p> 
+								<p> Nosso compromisso com a agricultura de precisão é um passo em direção a um futuro mais sustentável, onde a tecnologia se une à natureza para promover uma produção alimentar eficiente e ecologicamente correta. À medida que continuamos a explorar e implementar essas soluções, estamos confiantes de que podemos contribuir para a segurança alimentar e a preservação do nosso planeta.</p> 
 						</article>
 
 					<!-- Post -->
@@ -55,16 +55,16 @@
 
 					<!-- Pagination -->
 						<div class="pagination">
-							<a href="1.html#" class="button previous">Previous Page</a>
+							<a href="2.html#" class="button previous">Previous Page</a>
 							<div class="pages">
 								<a href="1.html#">1</a>
-								<a href="2.html#"class="active">2</a>
-								<a href="3.html#">3</a>
+								<a href="2.html#">2</a>
+								<a href="3.html#" class="active">3</a>
 								<a href="4.html#">4</a>
 								<span>&hellip;</span>
 								<a href="#">20</a>
 							</div>
-							<a href="3.html#" class="button next">Next Page</a>
+							<a href="4.html#" class="button next">Next Page</a>
 						</div>
 
 				</div>
