--- a/4.html
+++ b/4.html
@@ -20,8 +20,8 @@
 					<!-- Post -->
 						<article class="box post post-excerpt">
 							<header>
-								<h2><a href="#">Pesquisa científica</a></h2>
-								<p>Pesquisa científicaPesquisa científicaPesquisa científica</p>
+								<h2><a href="#">O Poder do Python na Análise de Dados: Um Estudo de Caso com os Registros de Votação de 2022 </a></h2>
+								<p>drone agricoladrone agricoladrone agricoladrone agricola </p>
 							</header>
 							<div class="info">
 								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
@@ -32,22 +32,19 @@
 									<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
 								</ul>
 							</div>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<p> <a href="#python">A Pesquisa: </a></p>
-								<p>
-								A pesquisa ambiental é um campo em constante evolução, e uma das abordagens mais inovadoras que estamos explorando envolve a elaboração de GIFs que representam séries temporais do Índice de Vegetação por Diferença Normalizada (NDVI) ao longo do ano. Essa técnica é especialmente útil para análises que envolvem mudanças na cobertura do solo e a saúde da vegetação em regiões específicas, como o deserto de Gobi, na China. </p>
-								<p> <a href="#python">O Que é NDVI? </a></p>
-								<p>O NDVI é uma medida amplamente utilizada para avaliar a vegetação a partir de dados de satélites. Ele varia de -1 a +1, onde valores próximos a +1 indicam vegetação saudável e densa, enquanto valores negativos geralmente correspondem a áreas sem vegetação, como corpos d'água ou solo exposto. Compreender o NDVI ao longo das estações é crucial para monitorar a saúde do ecossistema e as dinâmicas de expansão ou contração de áreas desertificadas.</p>
-								<p> <a href="#python">Visualizando Mudanças com GIFs </a></p> 
-								<p>A criação de GIFs a partir de dados NDVI nos permite visualizar as mudanças ao longo do tempo de forma dinâmica e impactante. No caso do deserto de Gobi, por exemplo, podemos observar como essa região avança e recua ao longo do ano. Essas animações capturam a essência das mudanças sazonais e nos ajudam a entender melhor os processos ecológicos que afetam o local. Com esses GIFs, conseguimos transmitir informações complexas de maneira mais intuitiva, facilitando a interpretação tanto para cientistas quanto para o público em </p
-								>
-								<p> <a href="#python">A Relevância da Análise Temporal  </a></p> 
-								<p> Análises temporais são essenciais para compreender como os ecossistemas reagem a variáveis climáticas e antropogênicas. O deserto de Gobi, uma das maiores regiões desérticas do mundo, é um exemplo perfeito para estudar essas dinâmicas. Durante períodos de maior precipitação, áreas que tradicionalmente eram áridas podem apresentar um aumento significativo na vegetação, refletido em valores mais altos de NDVI. Por outro lado, em épocas de seca, podemos observar uma retração da vegetação, evidenciando os desafios enfrentados por esses ecossistemas. </p>
-								<p> <a href="#python">Interdisciplinaridade e Colaboração </a></p> 
-								<p> Uma das grandes vantagens de usar ferramentas como GIFs e gráficos é a possibilidade de colaboração interdisciplinar. Os projetos podem envolver não apenas biólogos e ecologistas, mas também especialistas em ciência da computação e design gráfico. Essa interação rica entre diferentes áreas do conhecimento enriquece nossas análises e nos permite apresentar resultados de maneira mais eficaz. </p> 
-								<p> <a href="#python">Conclusão: Um Caminho para a Sustentabilidade </a></p> 
-								<p> A combinação de GIFs de séries temporais em NDVI e a visualização de dados em Python representa um avanço significativo nas metodologias de pesquisa ambiental. Essas abordagens não apenas ampliam nosso entendimento sobre as dinâmicas dos ecossistemas, mas também potencializam a comunicação científica, tornando as informações mais acessíveis e atraentes. À medida que continuamos a explorar essas técnicas, acreditamos que poderemos contribuir ainda mais para a preservação e compreensão do nosso meio ambiente, ajudando a construir um futuro mais sustentável para as próximas gerações.</p> 
-								<p> Investir em tecnologia e metodologias inovadoras é essencial para enfrentar os desafios ambientais do século XXI, e estamos comprometidos em utilizar essas ferramentas para promover a conscientização e a ação em relação às questões ecológicas que impactam nosso planeta.</p> 
+							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<p> Em um mundo cada vez mais orientado por dados, a escolha da linguagem de programação correta pode fazer toda a diferença na eficiência e na eficácia das análises. Na nossa equipe, optamos por utilizar Python como ferramenta principal devido à sua notável capacidade de tratamento de grandes volumes de dados e à sua vasta gama de bibliotecas e frameworks que facilitam o desenvolvimento de soluções complexas.</p>
+								<p> <a href="#python">Por que Python? </a></p>
+								<p> Python é uma linguagem versátil e poderosa, amplamente utilizada em ciência de dados, análise estatística e desenvolvimento de aplicações. Sua sintaxe clara e concisa permite que os desenvolvedores escrevam código de forma rápida e eficaz. Além disso, Python conta com uma comunidade ativa que constantemente cria e atualiza bibliotecas que otimizam o processo de manipulação e visualização de dados. </p>
+								<p> Entre as bibliotecas mais populares estão Pandas, para manipulação de dados; Matplotlib e Seaborn, para visualizações gráficas; e Geopandas, que facilita o trabalho com dados geoespaciais. Essa riqueza de ferramentas torna Python uma escolha ideal para projetos que envolvem grandes conjuntos de dados. </p>
+								<p> <a href="#python">Analisando os Registros de Votação de 2022 </a></p>
+								<p>Recentemente, trabalhamos com um conjunto de dados massivo que compreende os registros de votação das eleições de 2022. Esse banco de dados possui mais de 5 mil linhas, representando uma diversidade de informações sobre os eleitores, as urnas e os resultados das votações em diferentes regiões. A manipulação e a análise de tais volumes de dados são desafios que exigem ferramentas robustas e eficientes.</p>
+								<p>Utilizando Python, conseguimos processar esses dados de maneira ágil, aplicando filtros e agregações que nos permitiram extrair insights significativos. Por exemplo, podemos analisar padrões de votação por região, identificar áreas com maior participação eleitoral e até mesmo visualizar tendências ao longo do tempo. </p>
+								<p> <a href="#python">Visualização em Formato de Mapas</a></p> 
+								<p>Um dos aspectos mais empolgantes de nosso projeto foi a visualização dos dados em formato de mapas. Com a ajuda do Geopandas e outras bibliotecas de visualização, conseguimos plotar os resultados das votações em mapas geográficos, o que não apenas torna a informação mais acessível, mas também revela padrões que podem não ser evidentes em tabelas tradicionais. </p>
+								<p>Essas visualizações oferecem uma perspectiva poderosa sobre a dinâmica eleitoral, permitindo que analistas, pesquisadores e o público em geral compreendam melhor como diferentes regiões votaram e como essas escolhas se distribuíram pelo país. </p>
+								<p> <a href="#python">Conclusão: O Futuro da Análise de Dados </a></p> 
+								<p> A escolha de Python como nossa linguagem de programação não é apenas uma questão de preferência, mas uma decisão estratégica que nos capacita a lidar com grandes volumes de dados de maneira eficiente e eficaz. Com a combinação certa de bibliotecas e técnicas, somos capazes de transformar dados brutos em informações valiosas e visualmente impactantes. </p>
 						</article>
 
 					<!-- Post -->
@@ -55,16 +52,16 @@
 
 					<!-- Pagination -->
 						<div class="pagination">
-							<a href="1.html#" class="button previous">Previous Page</a>
+							<a href="3.html#" class="button previous">Previous Page</a>
 							<div class="pages">
 								<a href="1.html#">1</a>
-								<a href="2.html#"class="active">2</a>
+								<a href="2.html#">2</a>
 								<a href="3.html#">3</a>
-								<a href="4.html#">4</a>
+								<a href="4.html#" class="active">4</a>
 								<span>&hellip;</span>
 								<a href="#">20</a>
 							</div>
-							<a href="3.html#" class="button next">Next Page</a>
+							<a href="5.html#" class="button next">Next Page</a>
 						</div>
 
 				</div>
