--- a/5.html
+++ b/5.html
@@ -6,6 +6,11 @@
 -->
 <html>
 	<head>
+		 <style> 
+			iframe {
+            	width: 150%;
+            	height: 80vh;
+        </style> 
 		<title>Sintropica Consultoria Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -20,8 +25,9 @@
 					<!-- Post -->
 						<article class="box post post-excerpt">
 							<header>
-								<h2><a href="#">Pesquisa científica</a></h2>
-								<p>Pesquisa científicaPesquisa científicaPesquisa científica</p>
+								<h2><a href="#"> Artigo: Uso de Inteligência Artificial no Geoprocessamento para Análise de Tipos de Telhados em Jacareí </a></h2>
+								<p>drone agricoladrone agricoladrone agricoladrone agricola </p>
+
 							</header>
 							<div class="info">
 								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
@@ -32,22 +38,18 @@
 									<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
 								</ul>
 							</div>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<p> <a href="#python">A Pesquisa: </a></p>
-								<p>
-								A pesquisa ambiental é um campo em constante evolução, e uma das abordagens mais inovadoras que estamos explorando envolve a elaboração de GIFs que representam séries temporais do Índice de Vegetação por Diferença Normalizada (NDVI) ao longo do ano. Essa técnica é especialmente útil para análises que envolvem mudanças na cobertura do solo e a saúde da vegetação em regiões específicas, como o deserto de Gobi, na China. </p>
-								<p> <a href="#python">O Que é NDVI? </a></p>
-								<p>O NDVI é uma medida amplamente utilizada para avaliar a vegetação a partir de dados de satélites. Ele varia de -1 a +1, onde valores próximos a +1 indicam vegetação saudável e densa, enquanto valores negativos geralmente correspondem a áreas sem vegetação, como corpos d'água ou solo exposto. Compreender o NDVI ao longo das estações é crucial para monitorar a saúde do ecossistema e as dinâmicas de expansão ou contração de áreas desertificadas.</p>
-								<p> <a href="#python">Visualizando Mudanças com GIFs </a></p> 
-								<p>A criação de GIFs a partir de dados NDVI nos permite visualizar as mudanças ao longo do tempo de forma dinâmica e impactante. No caso do deserto de Gobi, por exemplo, podemos observar como essa região avança e recua ao longo do ano. Essas animações capturam a essência das mudanças sazonais e nos ajudam a entender melhor os processos ecológicos que afetam o local. Com esses GIFs, conseguimos transmitir informações complexas de maneira mais intuitiva, facilitando a interpretação tanto para cientistas quanto para o público em </p
-								>
-								<p> <a href="#python">A Relevância da Análise Temporal  </a></p> 
-								<p> Análises temporais são essenciais para compreender como os ecossistemas reagem a variáveis climáticas e antropogênicas. O deserto de Gobi, uma das maiores regiões desérticas do mundo, é um exemplo perfeito para estudar essas dinâmicas. Durante períodos de maior precipitação, áreas que tradicionalmente eram áridas podem apresentar um aumento significativo na vegetação, refletido em valores mais altos de NDVI. Por outro lado, em épocas de seca, podemos observar uma retração da vegetação, evidenciando os desafios enfrentados por esses ecossistemas. </p>
-								<p> <a href="#python">Interdisciplinaridade e Colaboração </a></p> 
-								<p> Uma das grandes vantagens de usar ferramentas como GIFs e gráficos é a possibilidade de colaboração interdisciplinar. Os projetos podem envolver não apenas biólogos e ecologistas, mas também especialistas em ciência da computação e design gráfico. Essa interação rica entre diferentes áreas do conhecimento enriquece nossas análises e nos permite apresentar resultados de maneira mais eficaz. </p> 
-								<p> <a href="#python">Conclusão: Um Caminho para a Sustentabilidade </a></p> 
-								<p> A combinação de GIFs de séries temporais em NDVI e a visualização de dados em Python representa um avanço significativo nas metodologias de pesquisa ambiental. Essas abordagens não apenas ampliam nosso entendimento sobre as dinâmicas dos ecossistemas, mas também potencializam a comunicação científica, tornando as informações mais acessíveis e atraentes. À medida que continuamos a explorar essas técnicas, acreditamos que poderemos contribuir ainda mais para a preservação e compreensão do nosso meio ambiente, ajudando a construir um futuro mais sustentável para as próximas gerações.</p> 
-								<p> Investir em tecnologia e metodologias inovadoras é essencial para enfrentar os desafios ambientais do século XXI, e estamos comprometidos em utilizar essas ferramentas para promover a conscientização e a ação em relação às questões ecológicas que impactam nosso planeta.</p> 
+							<span class="image main"><iframe height= 80vh src="https://centered-memory-382618.projects.earthengine.app/view/ndvislplitfalsacor" frameborder="0"></iframe></span>
+								<p>Palavras-chave: Inteligência Artificial, Geoprocessamento, Risco de desabamento de telhados, Jacareí. </p>
+								<p> <a href="#python">Introdução </a></p><p> Este trabalho, desenvolvido por Renan Ambiel e Nilton Davi da Silva, investiga a aplicação de inteligência artificial na classificação de telhados em Jacareí, com foco na identificação de habitações antigas e suas vulnerabilidades em face de eventos climáticos extremos. Diante das mudanças climáticas, as construções mais antigas, especialmente aquelas com estruturas de madeira, tornam-se suscetíveis a riscos de desabamento. </p>
+
+								<p> <a href="#python">Metodologia </a></p>
+								<p> A pesquisa utilizou um algoritmo de aprendizado de máquina para identificar telhados de diferentes materiais, com ênfase nas telhas de cerâmica, que predominam na área urbana da cidade. A metodologia envolveu a coleta e processamento de dados espaciais utilizando o Google Earth Engine, onde foram analisadas 14 imagens do satélite Sentinel-2. Através da técnica de classificação supervisionada, especificamente o algoritmo Random Forest, foi possível categorizar as construções em telhas de cerâmica, lajes e telhas de concreto, entre outras. </p>
+								<p> <a href="#python">Resultados </a></p>
+								<p>Os resultados revelaram que mais de 40% da área construída de Jacareí é composta por telhados antigos, com os bairros Parque do Príncipe e Cidade Salvador destacando-se como as áreas com maior concentração de habitações vulneráveis. A pesquisa também apresenta um mapa interativo que permitirá à prefeitura utilizar esses dados para embasar decisões no planejamento urbano habitacional e na mitigação dos riscos associados às mudanças climáticas.</p>
+								<p> <a href="#python">Relevância</a></p> 
+								<p>A relevância deste estudo reside na sua contribuição para a gestão urbana, utilizando tecnologias de baixo custo computacional e propondo uma abordagem inovadora na identificação de padrões na construção civil. Além disso, a pesquisa destaca a necessidade de intervenções pontuais e eficientes para garantir a segurança das estruturas habitacionais em Jacareí. </p>
+								<a href="renna_nilton_metogologia.pdf" download>Baixar PDF</a>
+								
 						</article>
 
 					<!-- Post -->
@@ -55,16 +57,16 @@
 
 					<!-- Pagination -->
 						<div class="pagination">
-							<a href="1.html#" class="button previous">Previous Page</a>
+							<a href="4.html#" class="button previous">Previous Page</a>
 							<div class="pages">
-								<a href="1.html#">1</a>
-								<a href="2.html#"class="active">2</a>
-								<a href="3.html#">3</a>
-								<a href="4.html#">4</a>
+								<a href="5.html#" class="active">5</a>
+								<a href="6.html#">6</a>
+								<a href="7.html#">7</a>
+								<a href="8.html#">8</a>
 								<span>&hellip;</span>
 								<a href="#">20</a>
 							</div>
-							<a href="3.html#" class="button next">Next Page</a>
+							<a href="6.html#" class="button next">Next Page</a>
 						</div>
 
 				</div>
