--- a/5.html
+++ b/5.html
@@ -6,12 +6,6 @@
 -->
 <html>
 	<head>
-		 <style> 
-			iframe {
-            	width: 220%;
-            	height: 80vh;
-            	max-width: 22800px;
-        </style> 
 		<title>Sintropica Consultoria Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -39,7 +33,7 @@
 									<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
 								</ul>
 							</div>
-							<span class="image main"><iframe height= 100vh src="https://renanambielreman.users.earthengine.app/view/telhasceramica" frameborder="0"></iframe></span>
+							<iframe height= 400px width=400px src="https://renanambielreman.users.earthengine.app/view/telhasceramica" frameborder="1" ></iframe>
 								<p>Palavras-chave: Inteligência Artificial, Geoprocessamento, Risco de desabamento de telhados, Jacareí. </p>
 								<p> <a href="#python">Introdução </a></p><p> Este trabalho, desenvolvido por Renan Ambiel e Nilton Davi da Silva, investiga a aplicação de inteligência artificial na classificação de telhados em Jacareí, com foco na identificação de habitações antigas e suas vulnerabilidades em face de eventos climáticos extremos. Diante das mudanças climáticas, as construções mais antigas, especialmente aquelas com estruturas de madeira, tornam-se suscetíveis a riscos de desabamento. </p>
 
