--- a/1.html
+++ b/1.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<title>Sintropica Consultoria Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -37,7 +38,7 @@
 									the entire "date" element.
 
 								-->
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">14</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">out<span>y</span></span> <span class="day">15</span><span class="year">, 2024</span></span>
 								<!--
 									Note: You can change the number of list items in "stats" to whatever you want.
 								-->
@@ -70,6 +71,13 @@
 							sintropia (tendência complementar à entropia). Com isso, AS proporciona um encontro informal e 
 							experimental entre abordagens oriundas de campos distintos da ciência, da tecnologia e do conhecimento prático. 
 							</p>
+							<h3>Deixe um comentário:</h3>
+						    <form action="comentarios.php" method="post">
+						        <label for="nome">Nome:</label><br>
+						        <input type="text" id="nome" name="nome" required><br><br>
+						        <label for="comentario">Comentário:</label><br>
+						        <textarea id="comentario" name="comentario" rows="7" required></textarea><br><br>
+							<input type="submit" value="Enviar">
 						</article>
 
 					<!-- Post -->
@@ -92,19 +100,21 @@
 				</div>
 			</div>
 
+
 		<!-- Sidebar -->
 			<div id="sidebar">
 
 				<!-- Logo -->
-					<h1 id="logo"><a href="#">Sintrópica</a></h1>
+					<h1 id="logo"><a href="index.html">Sintrópica</a></h1>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Latest Post</a></li>
-							<li><a href="#">Archives</a></li>
-							<li><a href="#">About Me</a></li>
-							<li><a href="#">Contact Me</a></li>
+							<li class="current"><a href="#">Posts</a></li>
+							<li><a href="#">aquivo</a></li>
+							<li><a href="">livros </a></li>
+							<li><a href=""target="_blank" >scripts</a></li>
+							<li><a href="">contato </a></li>
 						</ul>
 					</nav>
 
@@ -119,8 +129,7 @@
 					<section class="box text-style1">
 						<div class="inner">
 							<p>
-								<strong>Striped:</strong> A free and fully responsive HTML5 site
-								template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>
+								<strong> Sintropica Consultoria:</strong> soluções ambientais e agricolas. A nossa missão é trabalhar para um futuro mais verde <a href="https://sintropicaconsultoria.netlify.app/#"> visite nosso site </a> 
 							</p>
 						</div>
 					</section>
@@ -131,8 +140,8 @@
 							<h2>Recent Posts</h2>
 						</header>
 						<ul>
-							<li><a href="1.html#">Agricultura sintropica</a></li>
-							<li><a href="2.html#">Pesquisa científica</a></li>
+							<li><a href="#">Agricultura sintropica</a></li>
+							<li><a href="#">Pesquisa científica</a></li>
 							<li><a href="#">Sed dolore magna</a></li>
 							<li><a href="#">Malesuada commodo</a></li>
 							<li><a href="#">Ipsum metus nullam</a></li>
@@ -151,68 +160,7 @@
 						</ul>
 					</section>
 
-				<!-- Calendar -->
-					<section class="box calendar">
-						<div class="inner">
-							<table>
-								<caption>julho 2014</caption>
-								<thead>
-									<tr>
-										<th scope="col" title="Monday">s</th>
-										<th scope="col" title="Tuesday">T</th>
-										<th scope="col" title="Wednesday">q</th>
-										<th scope="col" title="Thursday">q</th>
-										<th scope="col" title="Friday">s</th>
-										<th scope="col" title="Saturday">S</th>
-										<th scope="col" title="Sunday">d</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td colspan="4" class="pad"><span>&nbsp;</span></td>
-										<td><span>1</span></td>
-										<td><span>2</span></td>
-										<td><span>3</span></td>
-									</tr>
-									<tr>
-										<td><span>4</span></td>
-										<td><span>5</span></td>
-										<td><a href="#">6</a></td>
-										<td><span>7</span></td>
-										<td><span>8</span></td>
-										<td><span>9</span></td>
-										<td><a href="#">10</a></td>
-									</tr>
-									<tr>
-										<td><span>11</span></td>
-										<td><span>12</span></td>
-										<td><span>13</span></td>
-										<td class="today"><a href="#">14</a></td>
-										<td><span>15</span></td>
-										<td><span>16</span></td>
-										<td><span>17</span></td>
-									</tr>
-									<tr>
-										<td><span>18</span></td>
-										<td><span>19</span></td>
-										<td><span>20</span></td>
-										<td><span>21</span></td>
-										<td><span>22</span></td>
-										<td><a href="#">23</a></td>
-										<td><span>24</span></td>
-									</tr>
-									<tr>
-										<td><a href="#">25</a></td>
-										<td><span>26</span></td>
-										<td><span>27</span></td>
-										<td><span>28</span></td>
-										<td class="pad" colspan="3"><span>&nbsp;</span></td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</section>
-
+				
 				<!-- Copyright -->
 					<ul id="copyright">
 						<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
