--- a/5.html
+++ b/5.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<title>Sintropica Consultoria Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -25,15 +26,15 @@
 
 							</header>
 							<div class="info">
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
+								<span class="date"><span class="month">out<span>y</span></span> <span class="day">14</span><span class="year">, 2024</span></span>
 								<ul class="stats">
-									<li><a href="#" class="icon fa-comment">16</a></li>
-									<li><a href="#" class="icon fa-heart">32</a></li>
-									<li><a href="#" class="icon brands fa-twitter">64</a></li>
-									<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
+									<li><a href="#" class="icon fa-comment">0</a></li>
+									<li><a href="#" class="icon fa-heart">0</a></li>
+									<li><a href="#" class="icon brands fa-twitter">0</a></li>
+									<li><a href="#" class="icon brands fa-facebook-f">0</a></li>
 								</ul>
 							</div>
-							<iframe height= 400px width=400px src="https://renanambielreman.users.earthengine.app/view/telhasceramica" frameborder="1" ></iframe>
+							<iframe height= 500px width=600px src="https://renanambielreman.users.earthengine.app/view/telhasceramica" frameborder="1" ></iframe>
 								<p>Palavras-chave: Inteligência Artificial, Geoprocessamento, Risco de desabamento de telhados, Jacareí. </p>
 								<p> <a href="#python">Introdução </a></p><p> Este trabalho, desenvolvido por Renan Ambiel e Nilton Davi da Silva, investiga a aplicação de inteligência artificial na classificação de telhados em Jacareí, com foco na identificação de habitações antigas e suas vulnerabilidades em face de eventos climáticos extremos. Diante das mudanças climáticas, as construções mais antigas, especialmente aquelas com estruturas de madeira, tornam-se suscetíveis a riscos de desabamento. </p>
 
@@ -43,7 +44,7 @@
 								<p>Os resultados revelaram que mais de 40% da área construída de Jacareí é composta por telhados antigos, com os bairros Parque do Príncipe e Cidade Salvador destacando-se como as áreas com maior concentração de habitações vulneráveis. A pesquisa também apresenta um mapa interativo que permitirá à prefeitura utilizar esses dados para embasar decisões no planejamento urbano habitacional e na mitigação dos riscos associados às mudanças climáticas.</p>
 								<p> <a href="#python">Relevância</a></p> 
 								<p>A relevância deste estudo reside na sua contribuição para a gestão urbana, utilizando tecnologias de baixo custo computacional e propondo uma abordagem inovadora na identificação de padrões na construção civil. Além disso, a pesquisa destaca a necessidade de intervenções pontuais e eficientes para garantir a segurança das estruturas habitacionais em Jacareí. </p>
-								<a href="renna_nilton_metogologia.pdf" download>Baixar PDF</a>
+								<a href="renna_nilton_metogologia.pdf" target="_blank" download>Baixar PDF</a>
 								
 						</article>
 
@@ -71,15 +72,16 @@
 			<div id="sidebar">
 
 				<!-- Logo -->
-					<h1 id="logo"><a href="#">Sintrópica</a></h1>
+					<h1 id="logo"><a href="index.html">Sintrópica</a></h1>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Latest Post</a></li>
-							<li><a href="#">Archives</a></li>
-							<li><a href="#">About Me</a></li>
-							<li><a href="#">Contact Me</a></li>
+							<li class="current"><a href="#">Posts</a></li>
+							<li><a href="#">aquivo</a></li>
+							<li><a href="">livros </a></li>
+							<li><a href=""target="_blank" >scripts</a></li>
+							<li><a href="">contato </a></li>
 						</ul>
 					</nav>
 
@@ -94,8 +96,7 @@
 					<section class="box text-style1">
 						<div class="inner">
 							<p>
-								<strong>Striped:</strong> A free and fully responsive HTML5 site
-								template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>
+								<strong> Sintropica Consultoria:</strong> soluções ambientais e agricolas. A nossa missão é trabalhar para um futuro mais verde <a href="https://sintropicaconsultoria.netlify.app/#"> visite nosso site </a> 
 							</p>
 						</div>
 					</section>
