--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<title>Sintropica Consultoria Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -13,98 +14,22 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Content -->
-			<div id="content">
-				<div class="inner">
-
-					<!-- Post -->
-						<article class="box post post-excerpt">
-							<header>
-								<!--
-									Note: Titles and subtitles will wrap automatically when necessary, so don't worry
-									if they get too long. You can also remove the <p> entirely if you don't
-									need a subtitle.
-								-->
-								<h2><a href="#">Agricultura sintropica </a></h2>
-								<p>Os beneficios de uma agrilcultura sintropica de Ernest Gotch </p>
-							</header>
-							<div class="info">
-								<!--
-									Note: The date should be formatted exactly as it's shown below. In particular, the
-									"least significant" characters of the month should be encapsulated in a <span>
-									element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
-									Oh, and if you don't need a date for a particular page or post you can simply delete
-									the entire "date" element.
-
-								-->
-								<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">14</span><span class="year">, 2014</span></span>
-								<!--
-									Note: You can change the number of list items in "stats" to whatever you want.
-								-->
-								<ul class="stats">
-									<li><a href="#" class="icon fa-comment">0</a></li>
-									<li><a href="#" class="icon fa-heart">0</a></li>
-									<li><a href="#" class="icon brands fa-twitter">0</a></li>
-									<li><a href="#" class="icon brands fa-facebook-f">0</a></li>
-								</ul>
-							</div>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<p>
-							A agricultura nasceu como uma prática de sobrevivência, cresceu e agregou componentes de comércio e, mais 
-							tarde, se tornou uma rede de negócios globais e instrumento de política. Esse processo foi impulsionado pelo 
-							avanço da ciência e tecnologia e se deu, em grande parte, às custas dos recursos naturais. Mais recentemente, a
-							consciência dos limites planetários se concretizou em grandes pactos globais no ambiente das Nações Unidas, 
-							referentes à biodiversidade, ao clima e ao desenvolvimento sustentável. Nesse cenário, a ciência contemporânea 
-							enfrenta o desafio de mediar o diálogo tanto entre diferentes áreas científicas quanto entre o conhecimento 
-							acadêmico e outros sistemas de conhecimento. Em paralelo, no final do século XX, ganhava visibilidade a 
-							agricultura desenvolvida por Ernst Götsch (EG) ao longo de 40 anos. Os conceitos e práticas que norteiam esse 
-							tipo de agricultura hoje é conhecido como agricultura sintrópica (AS), objeto deste estudo. A dissertação examinou 
-							principalmente duas perguntas: 1) como a prática da AS dialoga com o conhecimento científico?; e 2) onde a AS 
-							se encaixa no vasto campo semântico da agricultura sustentável? Para isso, foi conduzida uma análise de conteúdo 
-							com base documental e validação reiterada que orientaram o processamento dos dados levantados no âmbito desta 
-							pesquisa. As conclusões foram: <strong>1) princípios e conceitos clássicos da ecologia de comunidades (especialmente </strong>
-							sucessão e facilitação), da ecofisiologia e ecologia funcional (aclimatação, adaptação, tolerância, estresse, 
-							ciclagem de nutrientes) estão, ainda que intuitivamente, na base conceitual e prática da AS. 2) a AS se enquadra 
-							no universo da agricultura sustentável e é um tipo particular de agricultura sucessional ou sistema agro-florestal, 
-							mas com a peculiaridade de se basear nos processos naturais de construção de fertilidade, orientada pela lógica da 
-							sintropia (tendência complementar à entropia). Com isso, AS proporciona um encontro informal e 
-							experimental entre abordagens oriundas de campos distintos da ciência, da tecnologia e do conhecimento prático. 
-							</p>
-						</article>
-
-					<!-- Post -->
-						
-
-					<!-- Pagination -->
-						<div class="pagination">
-							<!--<a href="#" class="button previous">Previous Page</a>-->
-							<div class="pages">
-								<a href="#" class="active">1</a>
-								<a href="2.html#">2</a>
-								<a href="#">3</a>
-								<a href="#">4</a>
-								<span>&hellip;</span>
-								<a href="#">20</a>
-							</div>
-							<a href="#" class="button next">Next Page</a>
-						</div>
-
-				</div>
-			</div>
+		
 
 		<!-- Sidebar -->
 			<div id="sidebar">
 
 				<!-- Logo -->
-					<h1 id="logo"><a href="#">Sintrópica</a></h1>
+					<h1 id="logo"><a href="index.html">Sintrópica</a></h1>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Latest Post</a></li>
-							<li><a href="#">Archives</a></li>
-							<li><a href="#">About Me</a></li>
-							<li><a href="#">Contact Me</a></li>
+							<li class="current"><a href="#">Posts</a></li>
+							<li><a href="#">aquivo</a></li>
+							<li><a href="">livros </a></li>
+							<li><a href=""target="_blank" >scripts</a></li>
+							<li><a href="">contato </a></li>
 						</ul>
 					</nav>
 
@@ -119,8 +44,7 @@
 					<section class="box text-style1">
 						<div class="inner">
 							<p>
-								<strong>Striped:</strong> A free and fully responsive HTML5 site
-								template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>
+								<strong> Sintropica Consultoria:</strong> soluções ambientais e agricolas. A nossa missão é trabalhar para um futuro mais verde <a href="https://sintropicaconsultoria.netlify.app/#"> visite nosso site </a> 
 							</p>
 						</div>
 					</section>
@@ -128,21 +52,21 @@
 				<!-- Recent Posts -->
 					<section class="box recent-posts">
 						<header>
-							<h2>Recent Posts</h2>
+							<h2>Últimos Posts</h2>
 						</header>
 						<ul>
 							<li><a href="#">Agricultura sintropica</a></li>
 							<li><a href="#">Pesquisa científica</a></li>
-							<li><a href="#">Sed dolore magna</a></li>
-							<li><a href="#">Malesuada commodo</a></li>
-							<li><a href="#">Ipsum metus nullam</a></li>
+							<li><a href="#">Agricultura de Precisão...</a></li>
+							<li><a href="#">O Poder do Python na a...</a></li>
+							<li><a href="#">Artigo: Uso de Inteligênc...</a></li>
 						</ul>
 					</section>
 
 				<!-- Recent Comments -->
 					<section class="box recent-comments">
 						<header>
-							<h2>Recent Comments</h2>
+							<h2>Comentários Recentes </h2>
 						</header>
 						<ul>
 							<li>case on <a href="#">Lorem ipsum dolor</a></li>
@@ -150,12 +74,32 @@
 							<li>case on <a href="#">Sed dolore magna</a></li>
 						</ul>
 					</section>
-
-				<!-- Calendar -->
+					<section class="box calendar">
+					    <div class="inner">
+					        <table>
+					            <caption><div id="mensagem"></div></caption>
+					            <thead>
+					                <tr>
+					                    <th scope="col">D</th>
+					                    <th scope="col">S</th>
+					                    <th scope="col">T</th>
+					                    <th scope="col">Q</th>
+					                    <th scope="col">Q</th>
+					                    <th scope="col">S</th>
+					                    <th scope="col">S</th>
+					                </tr>
+					            </thead>
+					            <tbody id="calendario">
+					                <!-- Os dias do mês serão gerados aqui -->
+					            </tbody>
+					        </table>
+					    </div>
+					</section>		
+				<!-- Calendar
 					<section class="box calendar">
 						<div class="inner">
 							<table>
-								<caption>julho 2014</caption>
+								<caption><div id="mensaagem"></div></caption>
 								<thead>
 									<tr>
 										<th scope="col" title="Monday">s</th>
@@ -211,10 +155,11 @@
 								</tbody>
 							</table>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Copyright -->
 					<ul id="copyright">
+						<div id="mensaageam"></div>
 						<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
@@ -226,6 +171,21 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+				const hj = new Date()
+				const mes = hj.getMonth()
+				const diaDoMes = hj.getDate();
+				const anoAtual = hj.getFullYear();
+				const ultimoDiaDoMes = new Date(anoAtual, mes + 1, 0).getDate();
+				const primeiroDiaDoMes = new Date(anoAtual, mes, 1)
+				const diaDaSemana = primeiroDiaDoMes.getDay()
+				document.getElementById("mensaageam").innerText = diaDaSemana
+				let linha = document.createElement('tr');
+				for (let i = 0; i < diaDaSemana; i++) {
+		            const celula = document.createElement('td');
+		            linha.appendChild(celula);
+		        }
+			</script>
 			
 	</body>
 </html>
