--- a/index.html
+++ b/index.html
@@ -10,11 +10,24 @@
 		<title>Sintropica Consultoria Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" /> 
 	</head>
 	<body class="is-preload">
 
-		
+		<!-- Content -->
+			<div id="content">
+				        <figure>
+				        <img src="images/pic01.jpg" width="40%" />
+				        <figcaption>Legenda da imagem explicando o conteúdo ou contexto.</figcaption>
+				        <img src="images/pic01.jpg" width="40%"/>
+				        <figcaption>Legenda da imagem explicando o conteúdo ou contexto.</figcaption>
+				        <img src="images/pic01.jpg" />
+				        <figcaption>Legenda da imagem explicando o conteúdo ou contexto.</figcaption>
+				        <img src="images/pic01.jpg"/>
+				        <figcaption>Legenda da imagem explicando o conteúdo ou contexto.</figcaption></figure>
+				        <p>afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf afdadsf </p>
+			</div>
+
 
 		<!-- Sidebar -->
 			<div id="sidebar">
@@ -26,7 +39,7 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="#">Posts</a></li>
-							<li><a href="#">aquivo</a></li>
+							<li><a href="">aquivo</a></li>
 							<li><a href="">livros </a></li>
 							<li><a href=""target="_blank" >scripts</a></li>
 							<li><a href="">contato </a></li>
@@ -36,7 +49,7 @@
 				<!-- Search -->
 					<section class="box search">
 						<form method="post" action="#">
-							<input type="text" class="text" name="search" placeholder="Search" />
+							<input type="text" class="text" name="search" placeholder="Pesquisar" />
 						</form>
 					</section>
 
@@ -63,106 +76,11 @@
 						</ul>
 					</section>
 
-				<!-- Recent Comments -->
-					<section class="box recent-comments">
-						<header>
-							<h2>Comentários Recentes </h2>
-						</header>
-						<ul>
-							<li>case on <a href="#">Lorem ipsum dolor</a></li>
-							<li>molly on <a href="#">Sed dolore magna</a></li>
-							<li>case on <a href="#">Sed dolore magna</a></li>
-						</ul>
-					</section>
-					<section class="box calendar">
-					    <div class="inner">
-					        <table>
-					            <caption><div id="mensagem"></div></caption>
-					            <thead>
-					                <tr>
-					                    <th scope="col">D</th>
-					                    <th scope="col">S</th>
-					                    <th scope="col">T</th>
-					                    <th scope="col">Q</th>
-					                    <th scope="col">Q</th>
-					                    <th scope="col">S</th>
-					                    <th scope="col">S</th>
-					                </tr>
-					            </thead>
-					            <tbody id="calendario">
-					                <!-- Os dias do mês serão gerados aqui -->
-					            </tbody>
-					        </table>
-					    </div>
-					</section>		
-				<!-- Calendar
-					<section class="box calendar">
-						<div class="inner">
-							<table>
-								<caption><div id="mensaagem"></div></caption>
-								<thead>
-									<tr>
-										<th scope="col" title="Monday">s</th>
-										<th scope="col" title="Tuesday">T</th>
-										<th scope="col" title="Wednesday">q</th>
-										<th scope="col" title="Thursday">q</th>
-										<th scope="col" title="Friday">s</th>
-										<th scope="col" title="Saturday">S</th>
-										<th scope="col" title="Sunday">d</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td colspan="4" class="pad"><span>&nbsp;</span></td>
-										<td><span>1</span></td>
-										<td><span>2</span></td>
-										<td><span>3</span></td>
-									</tr>
-									<tr>
-										<td><span>4</span></td>
-										<td><span>5</span></td>
-										<td><a href="#">6</a></td>
-										<td><span>7</span></td>
-										<td><span>8</span></td>
-										<td><span>9</span></td>
-										<td><a href="#">10</a></td>
-									</tr>
-									<tr>
-										<td><span>11</span></td>
-										<td><span>12</span></td>
-										<td><span>13</span></td>
-										<td class="today"><a href="#">14</a></td>
-										<td><span>15</span></td>
-										<td><span>16</span></td>
-										<td><span>17</span></td>
-									</tr>
-									<tr>
-										<td><span>18</span></td>
-										<td><span>19</span></td>
-										<td><span>20</span></td>
-										<td><span>21</span></td>
-										<td><span>22</span></td>
-										<td><a href="#">23</a></td>
-										<td><span>24</span></td>
-									</tr>
-									<tr>
-										<td><a href="#">25</a></td>
-										<td><span>26</span></td>
-										<td><span>27</span></td>
-										<td><span>28</span></td>
-										<td class="pad" colspan="3"><span>&nbsp;</span></td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</section> -->
-
 				<!-- Copyright -->
 					<ul id="copyright">
 						<div id="mensaageam"></div>
 						<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-
 			</div>
 
 		<!-- Scripts -->
@@ -171,21 +89,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script>
-				const hj = new Date()
-				const mes = hj.getMonth()
-				const diaDoMes = hj.getDate();
-				const anoAtual = hj.getFullYear();
-				const ultimoDiaDoMes = new Date(anoAtual, mes + 1, 0).getDate();
-				const primeiroDiaDoMes = new Date(anoAtual, mes, 1)
-				const diaDaSemana = primeiroDiaDoMes.getDay()
-				document.getElementById("mensaageam").innerText = diaDaSemana
-				let linha = document.createElement('tr');
-				for (let i = 0; i < diaDaSemana; i++) {
-		            const celula = document.createElement('td');
-		            linha.appendChild(celula);
-		        }
-			</script>
-			
+
 	</body>
 </html>
