--- a/1.html
+++ b/1.html
@@ -72,7 +72,7 @@
 							experimental entre abordagens oriundas de campos distintos da ciência, da tecnologia e do conhecimento prático. 
 							</p>
 							<h3>Deixe um comentário:</h3>
-						    <form action=".netlify\v1\functions\funçoes\salvar-comentario" method="POST" data-netlify="true">
+						    <form action="funcoes\salvar-comentario" method="POST" data-netlify="true">
 						        <label for="nome">Nome:</label><br>
 						        <input type="text" id="nome" name="nome" required><br><br>
 						        <label for="comentario">Comentário:</label><br>
